--- a/en/_posts/2024-05-28-spoken.md
+++ b/en/_posts/2024-05-28-spoken.md
@@ -1,11 +1,11 @@
 ---
-tags: [quotes]
+tags: [quotes,featured]
 cover: "spoken.jpg"
 ---
 
 # "I have spoken" and "this is the way" - The Mandalorian
 
-I'm a huge fan of [Star Wars franchise](https://en.wikipedia.org/wiki/Star_Warshttps://en.wikipedia.org/wiki/Star_Wars). Just look at my [Yoda lego](/yoda) or [R2D2](/r2d2). I'm also a movie buff and very often the quotes from the movies or series I watch stick and me or my family use them in our daily lives. So I decided to create a [movie/film/tv quotes](/quotes) category on this blog where I'll be posting some of my favorites and I'll start with [The Mandalorian](https://en.wikipedia.org/wiki/The_Mandalorian) and two meaningful and very decisive quotes from there:
+I'm a huge fan of [Star Wars franchise](https://en.wikipedia.org/wiki/Star_Warshttps://en.wikipedia.org/wiki/Star_Wars). Just look at my [Yoda lego](/yoda) or [R2D2](/r2d2). I'm also a movie buff and very often the quotes from the movies or series I watch stick and me or my family use them in our daily lives. So I decided to create a [movie/film/tv quotes](/quotes) category on this blog where I'll be posting some of my favorites and I'll start with [The Mandalorian](https://en.wikipedia.org/wiki/The_Mandalorian) and two meaningful quotes from there:
 
 <!--More-->
 
@@ -14,9 +14,9 @@ I'm a huge fan of [Star Wars franchise](https://en.wikipedia.org/wiki/Star_Warsh
 * TOC
 {:toc}
 
-## "I have spoken" - or how to end a conversation
+## "I have spoken" - or how to end a conversation 🙅‍♂️
 
-I'll start with the lesser-known quote which is very useful **if you're a parent**. In the [Chapter 2: The Child](https://en.wikipedia.org/wiki/Chapter_2:_The_Child) the main character meets a very intriguing person [Kuiil](https://en.wikipedia.org/wiki/Kuiil) who has this manner of speaking in a very decidedly manner. He finishes his speech with:
+I'll start with the lesser-known quote which is very useful **if you're a parent**. In the [Chapter 2: The Child](https://en.wikipedia.org/wiki/Chapter_2:_The_Child) we get introduced to a very intriguing character [Kuiil](https://en.wikipedia.org/wiki/Kuiil) who has this manner of speaking in a very decisive manner. He finishes his speech with:
 
 > I have spoken.
 
@@ -28,7 +28,7 @@ I love this. I'm an open person, I love arguing, going back and forth, but somet
 
 Especially with kids. Very often they are pushing in their direction and that's fine, but sometimes we just have to decide and go as a family. Then I use this phrase and stop arguing.
 
-I have spoken and it's done. ✅ No further discussions.
+I have spoken. It's done. ✅ No further discussions.
 
 ## This is the way - how to motivate to action 💪
 
@@ -36,7 +36,7 @@ Whenever the main character, [The Mandalorian himself](https://en.wikipedia.org/
 
 > This is the way.
 
-Again, it kinda stops arguing and back and forth. It means a decision has been made and this is the one to take and there will be no further discussion. This quote motivates me to decide and go forward. To move on and finally do what I've set out to do!
+Again, it kinda stops arguing and finishes the back and forth. It means a decision has been made and this is the one to take and there will be no further discussion. This quote motivates me to decide and go forward. To move on and finally do what I've set out to do!
 
 I remember internally at [Nozbe][n] last year we were discussing whether we should finally [raise and harmonize prices](/pricing-new/). In the end after much deliberation we concluded that *this is the way* and there was no turning back.
 
