nadgryzieni i mastodon catch up

--- a/en/_posts/2024-05-30-ipadp.md
+++ b/en/_posts/2024-05-30-ipadp.md
@@ -2,6 +2,8 @@
 tags: [ipadonly,productivity,featured]
 cover: "ipad-productivity.jpg"
 social: "ipad-productivity.jpg"
+redirect_from: /ipad-productivity/
+m: https://social.nozbe.com/@michael/112532080567736182
 ---
 
 # How can I be so productive on the iPad?
