--- a/en/_posts/2024-06-17-coffee.md
+++ b/en/_posts/2024-06-17-coffee.md
@@ -21,7 +21,7 @@ After "[interrupting with meetings](/meetings)" it's time for the second video o
 
 > 🏝️ I love coffee! And you're right! If you're in a physical office it's easier to bump into someone and have a casual conversation that might spark an idea!
 
-> **🏢:** AHA!
+> 🏢 AHA!
 
 > 🏝️ Yeah - you got me there, it's hard to bump into someone if you work remotely.
 
@@ -31,9 +31,11 @@ After "[interrupting with meetings](/meetings)" it's time for the second video o
 
 > 🏢 You want to plan a spontaneous conversation?
 
-> 🏝️ Kinda yes, let me explain…
+> 🏝️ Kinda yes…
 
 ## 🗓️ Planning spontaneous conversations?
+
+> 🏝️ Let me explain…
 
 > 🏢 OK, tell me. When you’re working remotely and having no one around you - how are these conversations happening?
 
