Titles in Now pages fixed…

--- a/en/_posts/2020-07-25-now200725.md
+++ b/en/_posts/2020-07-25-now200725.md
@@ -1,9 +1,10 @@
 ---
-title: "What I'm doing as of July 25"
 vid: "uq2xwFTrJGw"
 img: szaffi.jpg
 tags: [now]
 ---
+
+# On July 25 '20 I am…
 
 I'm still in my home office grounded by the “coronavirus”:
 
