--- a/en/_posts/2020-09-14-now200914.md
+++ b/en/_posts/2020-09-14-now200914.md
@@ -3,7 +3,7 @@ tags: [now]
 img: office-3.jpg
 ---
 
-# What I'm doing as of September 14
+# On September 14 '20 I am…
 
 I'm in my [home office](/office):
 
