--- a/en/_posts/2020-11-02-now201102.md
+++ b/en/_posts/2020-11-02-now201102.md
@@ -3,7 +3,7 @@ tags: [now]
 img: "now201102.jpg"
 ---
 
-# What's up as of November 2?
+# On November 2 '20 I am…
 
 After [virtual Nozbe reunion](/reunion-virtual/) and a week-long vacation, I’m back at my home office:
 
