--- a/en/_posts/2020-12-09-now201209.md
+++ b/en/_posts/2020-12-09-now201209.md
@@ -3,7 +3,7 @@ tags: [now]
 img: now201209.jpg
 ---
 
-# What's up as of December 9
+# On December 9 '20 I am…
 
 I'm in my [home office](/office):
 
