--- a/en/_posts/2021-02-04-now210204.md
+++ b/en/_posts/2021-02-04-now210204.md
@@ -3,7 +3,7 @@ tags: [now]
 img: "now210204.jpg"
 ---
 
-# What's up as of February 4?
+# On February 4 '21 I am…
 
 The first month of 2021 is over, the virus is still there but we're hoping that things will be looking up for us!
 
