--- a/en/_posts/2021-07-04-now210704.md
+++ b/en/_posts/2021-07-04-now210704.md
@@ -3,7 +3,7 @@ tags: [now]
 cover: "now210704.jpg"
 ---
 
-# What's up as of July 4?
+# On July 4 '21 I am…
 
 Wow, it’s been a while since I wrote an update. Actually it’s been 4 months, and I’m still as busy as ever!
 
