--- a/en/_posts/2021-10-06-now211006.md
+++ b/en/_posts/2021-10-06-now211006.md
@@ -3,7 +3,7 @@ tags: [now]
 cover: "now211006.jpg"
 ---
 
-# What's up as of October 6?
+# On October 6 '21 I am…
 
 It’s October. It’s Fall time. The most exciting quarter of the year has started and it’s going to be really packed for me!
 
