--- a/en/_posts/2022-01-21-now220121.md
+++ b/en/_posts/2022-01-21-now220121.md
@@ -3,7 +3,7 @@ tags: [now]
 img: "now220121.jpg"
 ---
 
-# What's up as of January 21?
+# On January 21 '22 I am…
 
 I’m embracing the new 2022 and the fact that I’ll be celebrating 15 years of running [Nozbe][n] on February 1. Wow, time flies!
 
