--- a/en/_posts/2022-03-25-now220325.md
+++ b/en/_posts/2022-03-25-now220325.md
@@ -3,7 +3,7 @@ tags: [now]
 cover: "now220325.jpg"
 ---
 
-# On March 25 I am…
+# On March 25 '22 I am…
 
 Getting ready for next week’s [Nozbe Reunion](/reunion/) in the beautiful city of Lublin, Poland (just 82km from Ukrainian border 🇺🇦).
 
