--- a/en/_posts/2022-07-08-now220708.md
+++ b/en/_posts/2022-07-08-now220708.md
@@ -3,7 +3,7 @@ tags: [now]
 img: "now220708.jpg"
 ---
 
-# On July 8 I am…
+# On July 8 '22 I am…
 
 It’s summer time! This means for me family vacations and some deep work sessions in between. Time to recharge the batteries for the last quarter of 2022!
 
