--- a/en/_posts/2022-11-30-now221130.md
+++ b/en/_posts/2022-11-30-now221130.md
@@ -3,7 +3,7 @@ tags: [now]
 img: "michael.leaning.jpg"
 ---
 
-# On November 30 I am…
+# On November 30 '22 I am…
 
 We just had a great Thanksgiving/Black Friday promo at [Nozbe][n] and now it’s time to prepare for the New Year’s season so that more and more people and teams will be able to get organized next year!
 
