--- a/en/_posts/2023-07-07-now230707.md
+++ b/en/_posts/2023-07-07-now230707.md
@@ -3,7 +3,7 @@ tags: [now]
 img: "now230707.jpg"
 ---
 
-# On July 7 I am…
+# On July 7 '23 I am…
 
 …starting my “summer months” which means, no meetings, lots of vacation time, lots of deep work sessions and thinking - recharging battery for what’s going to be a very busy end of the year for [Nozbe][n].
 
