--- a/en/_posts/2023-12-25-now231225.md
+++ b/en/_posts/2023-12-25-now231225.md
@@ -4,7 +4,7 @@ img: "now231225.jpg"
 m: https://social.nozbe.com/@michael/111646167698004399
 ---
 
-# On December 25 I am…
+# On December 25 '23 I am…
 
 It’s Christmas Day! I’m back with my family celebrating Christmas, my parents today celebrate their 47th wedding anniversary and I’m taking 2 weeks off to review the year and prepare myself for a challenging 2024!
 
