--- a/en/_posts/2024-04-29-now240429.md
+++ b/en/_posts/2024-04-29-now240429.md
@@ -3,7 +3,7 @@ tags: [now]
 img: "now240429.jpg"
 ---
 
-# On April 29 I am…
+# On April 29 '24 I am…
 
 First quarter of 2024 is done. Lots of new things happened at [Nozbe][n] and in my life… good progress all around!
 
