--- a/en/_posts/2020-06-26-now200626.md
+++ b/en/_posts/2020-06-26-now200626.md
@@ -1,9 +1,10 @@
 ---
-title: "What I'm doing as of June 26"
 vid: "w2L41TRhc-0"
 img: michael.team.now.jpg
 tags: [now]
 ---
+
+# On June 26 '20 I am…
 
 I'm in my home office grounded by the “coronavirus”:
 
