--- a/en/_posts/2023-10-13-now231013.md
+++ b/en/_posts/2023-10-13-now231013.md
@@ -4,7 +4,7 @@ img: "now231013.jpg"
 m: https://social.nozbe.com/@michael/111229053301516815
 ---
 
-# On October 13 I am…
+# On October 13 '23 I am…
 
 I just came back from our annual [Nozbe Reunion](/reunion), this time in Katowice, Poland. We had a great time bonding together and seeing each other after a difficult year for our company, [Nozbe][n] - and we took a moment to celebrate that things are looking up for us!
 
