--- a/en/_posts/2024-07-18-cellular.md
+++ b/en/_posts/2024-07-18-cellular.md
@@ -2,6 +2,7 @@
 tags: [ipadonly,featured]
 cover: "cellular.jpg"
 social: "cellular.jpg"
+m: https://social.nozbe.com/@michael/112808153673377869
 ---
 
 # 5G - 5 reasons for getting a cellular iPad
@@ -70,7 +71,7 @@ That's why having a 5G iPad I never bother to even ask for WiFi credentials. I j
 
 The limits of GB will also be going away. I'm already on an unlimited data plan, so I never worry about what I download or stream to my iPad. I just enjoy the glorious cellular speeds!
 
-## 3. You might NOT need an additional data plan anymore…
+## 4. You might NOT need an additional data plan anymore…
 
 Just like these data GB limits are going away, many mobile carrier providers don't even charge you an additional plan for the iPad. I'm on an unlimited data plan for my iPhone and my carrier let me add an eSIM to the iPad tied to the very same plan.
 
@@ -82,7 +83,7 @@ On the plus side, if you live in the US, your carrier plan works in all US state
 
 And if you travel to Asia or somewhere else, you can always buy an eSIM for a week or two and enjoy being online!
 
-## 4. Tethering from your iPhone sucks, is slow and drains battery…
+## 5. Tethering from your iPhone sucks, is slow and drains battery…
 
 Now that I've argued that you're buying an iPad for many years, the 5G speeds are getting better and in many situations faster than WiFi and an additional plan might not cost you a thing, everyone will just tell me about tethering: **…but you can use your connection from the iPhone!**
 
@@ -99,7 +100,7 @@ So let me repeat:
 
 Why would you do that?
 
-## 5. Bonus: your iPad can be a WiFi hotspot for your family!
+## Bonus: your iPad can be a WiFi hotspot for your family!
 
 When we travel my iPad is in my backpack and I've set it to accept tethering from *my family*, so all my daughters' iPads. This is a much better way of using tethering, because the iPad has bigger antennas for both WiFi and cellular so it works great as a mobile hot spot and when it's hidden in my [backpack](/backpack24) it barely uses battery because the screen is off.
 
