--- a/en/_posts/2024-08-04-now240804.md
+++ b/en/_posts/2024-08-04-now240804.md
@@ -3,9 +3,9 @@ tags: [now]
 img: "now240804.jpg"
 ---
 
-# On August 4 I am…
+# On August 4 '24 I am…
 
-Just started my August which means deep work, reading and a family camper RV trip. Need a break after quite a stressful first half of the year.
+…starting my summer August which means deep work, reading and a family camper RV trip. Need a break after quite a stressful first half of the year.
 
 <!--More-->
 
