--- a/en/_posts/2023-09-19-ifamily23.md
+++ b/en/_posts/2023-09-19-ifamily23.md
@@ -42,7 +42,7 @@ Photos was trickier. Only since iOS16 (only last year!) you can have truly share
 
 Until now we've been using both built-in passwords in iOS and 1Password7 syncing to the Primary iCloud vault. Now that 1Password version 8 doesn't support iCloud, this began to feel really difficult.
 
-AirTags was a big deal. [We use them a lot](/airtag/. Really, [a lot](/airtags/) and why we couldn't share their location was beyond me - we share the car keys and I'd like for both me and my wife to know where they are.
+AirTags was a big deal. [We use them a lot](/airtag/). Really, [a lot](/airtags/) and why we couldn't share their location was beyond me - we share the car keys and I'd like for both me and my wife to know where they are.
 
 Now that all of these 7 points mentioned above can be set up as shared in iOS17, I will finally be able to split our Apple IDs and configure her iPhone with her Apple ID and set up things which we want shared, to be shared together.
 
