hamilton img fix

--- a/en/_posts/2024-08-23-hamilton.md
+++ b/en/_posts/2024-08-23-hamilton.md
@@ -18,7 +18,7 @@ I love musicals and I'm a huge fan of the [Hamilton musical](https://hamiltonmus
 
 In our family this is exactly what happened. We quote Hamilton constantly and here are some of the quotes (more-less in order of appearance) that we use when we talk to each other. Yep, we're Hamilton geeks and we're not ashamed of ourselves.
 
-![{{ page.title }} 2](/img/hamilton-2.jpg)
+![{{ page.title }} 2](/img/hamilton.jpg)
 *Hamilton Stage on West-end as seen from our seats as my entire family and friends saw the show in May 2022*
 
 ### Talk less… smile more…
