--- a/en/_posts/2020-11-05-youtube.md
+++ b/en/_posts/2020-11-05-youtube.md
@@ -48,7 +48,7 @@ I've also created a handy [Siri Shortcut][shortcut] that helps me share any YouT
 
 ![{{ page.title }} 3](/img/youtube-3.jpg)
 
-**[Get the Siri Shortcut for iOS][shortcut]**
+**[Get the Siri Shortcut for iOS][s]**
 
 ## Enjoy... and don't tell YouTube!
 
@@ -56,6 +56,7 @@ Feel free to use my new special page together with the Shortcut. **Share it with
 
 **[Go to Michael.team/yt and enjoy!](/yt/)**
 
+[s]: https://www.icloud.com/shortcuts/56ebe64991fc441ea1bf0d4b52eaa2dd
 [shortcut]: https://www.icloud.com/shortcuts/1b20e7375c9f4a17b418f75736da46a1
 [shortcutx]: https://www.icloud.com/shortcuts/a45cec1e83944253b6c0bd3cb2915bc4
 
