no office fm and nie ma biura

--- a/pl/_posts/2024-09-06-nadgryzieni-492.md
+++ b/pl/_posts/2024-09-06-nadgryzieni-492.md
@@ -5,8 +5,7 @@ vid: "7xyOqxxVNRY"
 
 # Po wakacjach w Nadgryzionych 492 o nadchodzącym iPhone 16
 
-Krzysiek Kołacz był z Wojtkiem to ja się też dołączyłem i rozmawialiśmy nie tylko o iPhone 16, który już w poniedziałek, ale także o tym jakie sposoby na zwiększanie produktywności mamy na naszych urządzeniach z nadgryzionym jabłuszkiem. Między innymi opowiadam o moim [action button Shortcut](/action)
- [Więcej informacji ℹ️][l]
+Krzysiek Kołacz był umówiony z Wojtkiem na to nagranie, więc też się dołączyłem i rozmawialiśmy nie tylko o iPhonie 16, który już w poniedziałek, ale także o tym jakie sposoby na zwiększanie produktywności mamy na naszych urządzeniach z nadgryzionym jabłuszkiem. Między innymi opowiadam o moim [Skrócie do przycisku Akcji](/akcja), który opisywałem w [felietonie do iMagazine](/pl/akcja/).
 
 {% include video.html id=page.vid %}
 
@@ -18,7 +17,7 @@ Krzysiek Kołacz był z Wojtkiem to ja się też dołączyłem i rozmawialiśmy
 <source src="https://media.blubrry.com/nadgryzieni/imagazine.stronazen.pl/nadgryzieni/Nadgryzieni-Odcinek-492.mp3" type="audio/mpeg">
 </audio>
 
-
+[Link do podcastu na stronie iMagazine ℹ️][l].
 
 [l]: https://imagazine.pl/2024/09/06/nadgryzieni-492-budowanie-swojego-workflow-i-przewidywania-nt-iphoneow-16-pro/
 
