--- a/en/_posts/2024-09-11-now240911.md
+++ b/en/_posts/2024-09-11-now240911.md
@@ -5,7 +5,7 @@ img: "now240911.jpg"
 
 # On September 11 `24 I am…
 
-……back in my [home office](/office) after summer holidays and getting ready for our annual [Nozbe reunion](/reunion)
+…back in my [home office](/office) after summer holidays and getting ready for our annual [Nozbe reunion](/reunion)
 
 <!--More-->
 
@@ -22,8 +22,8 @@ img: "now240911.jpg"
 ## …and when I can, I'm also:
 
 * I’m so busy with [Nozbe](/nozbe) and podcasting, I don’t have time for much more. Especially that I’m podcasting also [in Polish](/pl/niemabiura)
-* I’m considering what to do with my [NoOffice book](https://NoOffice.org/) and when to finally finish it up.
-* I’m implementing my CORE hours better and working on improving my management style at Nozbe
+* I’m considering what to do with my [NoOffice book](https://NoOffice.org/) and when to finally finish it up. As I’m implementing my [CORE hours](/podcast-204/) better I'm tempted to write the CORE hours e-book this fall…
+* I've redesigned the header on this blog - now the menu is always visible. Before it was hidden under "More…" which wasn't intuitive.
 
 ## …and privately:
 
@@ -31,6 +31,7 @@ img: "now240911.jpg"
 * I’m finishing my [Lego set](/lego) of Ferrari (photos, soon!)
 * I’m hosting an exchange student as my eldest daughter is on the exchange in Brussels. Exciting times for my family!
 
+{% include video.html id="6aIU6ZPpan4" name="#NoOffice Podcast ep. 48 - Email vs Nozbe - How to Use Email Productively" %}
 
 [n]: https://michael.gratis/nozbe
 [np]: https://michael.gratis/nozbepersonal
