--- a/en/_posts/2023-11-27-nozbe-add.md
+++ b/en/_posts/2023-11-27-nozbe-add.md
@@ -57,6 +57,8 @@ In the [following post I show you how I use the "Action Button"](/action/) on my
 
 P.S. Many thanks to my Nozbe colleagues - Jarek and Mijam, for improving the API and this Siri Shortcut.
 
+**Update on September 25, 2024**: [Just published version 2.0 of this Shortcut, called "New To Do"](/newtodo)
+
 [t]: https://www.icloud.com/shortcuts/8c972184156c4b2c8a6c9cc5bb4123e3
 [t1]: https://www.icloud.com/shortcuts/c99c26476d57490a89b1a813bc325e5f
 [te]: https://www.icloud.com/shortcuts/b278f168fff14a6b9b7cb293faa31f6b
