updates to new to do

--- a/en/_posts/2024-09-25-newtodo.md
+++ b/en/_posts/2024-09-25-newtodo.md
@@ -1,7 +1,9 @@
 ---
 tags: [nozbe,shortcuts]
 cover: "newtodo.jpg"
-redirect_from: /NewToDo/
+redirect_from:
+ - /NewToDo/
+ - /zadanie/
 ---
 
 # New To Do - official Nozbe Siri Shortcut for iOS and Mac
@@ -16,7 +18,9 @@ I've created a version 2.0 of [Nozbe Shortcut to add tasks](/nozbe-add/) recentl
 
 ### [New To Do Shortcut for Nozbe version 2.0][s]
 
-I've also prepared a [Polish version 🇵🇱][sp] if you like. I've named the Shortcut "new to do" because when I say that, Siri actually reacts to my Shortcut.
+Also available: [🇵🇱 Polish version - Nowe Zadanie][sp]
+
+I've named the Shortcut "new to do" because when I say that, Siri actually reacts to my Shortcut. She doesn't like the word *[Nozbe][n]* for some reason…
 
 ## Features of "New To Do" for Nozbe
 
@@ -24,17 +28,26 @@ This Shortcut does several things:
 
 1. Adds a task you say to Siri
 2. If you have a photo, photos or files in clipboard, it will detect them and attach them to your new task if you want and ask you for optional description.
-3. If you have several lines of text selected, it will ask you if you want to add several tasks at once and batch add them!
+3. If you have several lines of text selected, it will ask you if you want to add **several tasks at once** and batch add them!
 
 ## How to set it up?
 
 Just open [Nozbe][n] and go to Settings > API Tokens and create a new token. Once you've [added the Shortcut][s] it will ask you to paste that token. This is your way of authenticating to Nozbe. Don't share this token with anyone else.
 
-Soon I'll link to official Nozbe blog about it and will also embed a video showcasing this Shortcut.
+## More on the Nozbe blog:
 
+[Read a longer and more detailed description on the Nozbe blog][nb] where you'll also find better instructions as to how to set it up.
+
+## Watch a short video to see it in action!
+
+And if video is your thing, [check out this new one on my YouTube Channel](https://michael.gratis/y):
+
+{% include videos.html id="wOrbzsfnuBE" name="🚀 Use Siri to Add Tasks to Nozbe! 🎙️ Try the New Shortcut Now! #productivity #remoteworklife" %}
+
+[nb]: https://nozbe.com/blog/new-to-do-nozbe-siri-shortcut-for-ios-and-mac/
 [s]: https://www.icloud.com/shortcuts/15dd293f661e4ec0a3a0732a619d140b
 
-[sp]: https://www.icloud.com/shortcuts/680f30dcaa60424287dbec31df80ed56
+[sp]: https://www.icloud.com/shortcuts/15066aa77c76430d865358b8d6013b9f
 
 [n]: https://michael.gratis/nozbe
 [np]: https://michael.gratis/nozbepersonal
