--- a/en/_posts/2024-09-25-newtodo.md
+++ b/en/_posts/2024-09-25-newtodo.md
@@ -3,6 +3,7 @@ tags: [nozbe,shortcuts]
 cover: "newtodo.jpg"
 redirect_from:
  - /NewToDo/
+ - /nozbe-todo/
 m: https://social.nozbe.com/@michael/113208942995073912
 ---
 
