--- a/en/_posts/2024-09-25-newtodo.md
+++ b/en/_posts/2024-09-25-newtodo.md
@@ -45,10 +45,17 @@ And if video is your thing, [check out this new one on my YouTube Channel](https
 
 {% include videos.html id="wOrbzsfnuBE" name="🚀 Use Siri to Add Tasks to Nozbe! 🎙️ Try the New Shortcut Now! #productivity #remoteworklife" %}
 
-[nb]: https://nozbe.com/blog/new-to-do-nozbe-siri-shortcut-for-ios-and-mac/
-[s]: https://www.icloud.com/shortcuts/15dd293f661e4ec0a3a0732a619d140b
+## You can also add tasks from your [Apple Watch](/applewatch/)
 
-[sp]: https://www.icloud.com/shortcuts/15066aa77c76430d865358b8d6013b9f
+{% include videos.html id="YPOrSjebE7E" name="#applewatch Add #tasks to #Nozbe from your wrist with #siri – just say "new to do" and go! 🚀" %}
+
+
+[nb]: https://nozbe.com/blog/new-to-do-nozbe-siri-shortcut-for-ios-and-mac/
+
+[s]: https://www.icloud.com/shortcuts/97cf4b78a7e54cc5ac1e7bebdcd3b151
+[s1]: https://www.icloud.com/shortcuts/15dd293f661e4ec0a3a0732a619d140b
+[sp]: https://www.icloud.com/shortcuts/28a3043fc0be4390b150334ffce50daf
+[sp1]: https://www.icloud.com/shortcuts/15066aa77c76430d865358b8d6013b9f
 
 [n]: https://michael.gratis/nozbe
 [np]: https://michael.gratis/nozbepersonal
