--- a/en/_posts/2024-10-15-tinify.md
+++ b/en/_posts/2024-10-15-tinify.md
@@ -1,6 +1,7 @@
 ---
-tags: [blogging]
+tags: [blogging,shortcuts]
 img: "tinify.jpg"
+m: https://social.nozbe.com/@michael/113312626151599357
 ---
 
 # Use Tinify (TinyJPG and TinyPNG) to compress your images
