--- a/pl/_posts/2024-09-26-zadanie.md
+++ b/pl/_posts/2024-09-26-zadanie.md
@@ -37,8 +37,14 @@ Skrót jest bardzo wszechstronny:
 
 {% include videos.html id="0Y6-TISZxuQ" name="𝗡𝗢𝗪𝗘 𝗭𝗔𝗗𝗔𝗡𝗜𝗘" %}
 
+## Można też dodawać zadanie [za pomocą zegarka](/applewatch/)
+
+{% include videos.html id="YPOrSjebE7E" name="#applewatch Add #tasks to #Nozbe from your wrist with #siri – just say "new to do" and go! 🚀" %}
+
 [nb]: https://nozbe.com/pl/blog/nowe-zadanie-oficjalny-skrot-siri-nozbe-na-ios-macos/
-[sp]: https://www.icloud.com/shortcuts/15066aa77c76430d865358b8d6013b9f
+
+[sp]: https://www.icloud.com/shortcuts/28a3043fc0be4390b150334ffce50daf
+[sp1]: https://www.icloud.com/shortcuts/15066aa77c76430d865358b8d6013b9f
 
 [n]: https://michael.gratis/nozbe_pl
 [np]: https://michael.gratis/nozbepersonal_pl
