fixes for shorts name

--- a/en/_posts/2024-09-25-newtodo.md
+++ b/en/_posts/2024-09-25-newtodo.md
@@ -43,11 +43,11 @@ Just open [Nozbe][n] and go to Settings > API Tokens and create a new token. Onc
 
 And if video is your thing, [check out this new one on my YouTube Channel](https://michael.gratis/y):
 
-{% include videos.html id="wOrbzsfnuBE" name="🚀 Use Siri to Add Tasks to Nozbe! 🎙️ Try the New Shortcut Now! #productivity #remoteworklife" %}
+{% include videos.html id="wOrbzsfnuBE" name="new to do" %}
 
 ## You can also add tasks from your [Apple Watch](/applewatch/)
 
-{% include videos.html id="YPOrSjebE7E" name="#applewatch Add #tasks to #Nozbe from your wrist with #siri – just say "new to do" and go! 🚀" %}
+{% include videos.html id="YPOrSjebE7E" name="new to do on watch" %}
 
 
 [nb]: https://nozbe.com/blog/new-to-do-nozbe-siri-shortcut-for-ios-and-mac/
