--- a/pl/_posts/2024-09-26-zadanie.md
+++ b/pl/_posts/2024-09-26-zadanie.md
@@ -39,7 +39,7 @@ Skrót jest bardzo wszechstronny:
 
 ## Można też dodawać zadanie [za pomocą zegarka](/applewatch/)
 
-{% include videos.html id="YPOrSjebE7E" name="#applewatch Add #tasks to #Nozbe from your wrist with #siri – just say "new to do" and go! 🚀" %}
+{% include videos.html id="YPOrSjebE7E" name="nowe zadanie watch" %}
 
 [nb]: https://nozbe.com/pl/blog/nowe-zadanie-oficjalny-skrot-siri-nozbe-na-ios-macos/
 
