--- a/en/_posts/2024-10-16-blanks.md
+++ b/en/_posts/2024-10-16-blanks.md
@@ -1,6 +1,7 @@
 ---
 tags: [shortcuts,apple]
 cover: "blanks.jpg"
+m: https://social.nozbe.com/@michael/113316734246966640
 ---
 
 # Apple Shortcuts and problems with IFs and blanks
@@ -40,7 +41,7 @@ As I saw my Shortcuts that used to work for me all these years start failing, I 
 9. If your regular expression doesn't match what it searches for, it's not blank, it *doesn't have any value*.
 10. Finally, if your Shortcut Input is empty, it's not really empty, it simply *doesn't have any value*.
 
-Uhh. That's it, I've created a handy Shortcut that checks all these 10 situations here:
+Uhh. That's it, I've created a handy Shortcut that checks all these 10 situations:
 
 ### [Test - Blank or Not](https://www.icloud.com/shortcuts/c6e74555225b41f099ef21bd4f62af21)
 
