--- a/en/_posts/2024-10-21-money.md
+++ b/en/_posts/2024-10-21-money.md
@@ -21,7 +21,7 @@ Hardly anybody works for free. You are being paid for your work. It might be a s
 
 [Minimum federal wage](https://www.minimum-wage.org/wage-by-state) in the USA is $7.25 but it varies from state to state - in some states it goes even to $15 and beyond. For the sake of the argument let's say an average minimum wage is $10.
 
-Ten bucks per hour.
+> Ten bucks per hour.
 
 Now, let's say you earn 10 bucks per hour or people that work for you are earning that. For each hour they work, you pay them 10 dollars.
 
@@ -31,7 +31,7 @@ This is the intangible argument for [productivity](/productivity). Let's say you
 
 That's 10 bucks in your pocket.
 
-What if you can save 1 hour per week? That's at least $40 in savings.
+> What if you can save 1 hour per week? That's at least $40 in savings.
 
 And it's true money. By working more efficiently you can take on more clients, you can produce more stuff, or do things with better quality because you have extra time.
 
@@ -62,7 +62,7 @@ You and your team members are more organized, less stressed, much more satisfied
 
 Again, with more hours saved you can serve more customers or you can improve quality thus charging more for your work.
 
-**By saving time you're making real money.**
+> **By saving time you're making real money.**
 
 How about the cost of forgetting things? Some of my customers told me how crucial at their work is to deliver results on time. If you're well organized, nothing slips through the cracks and the clients are always happy. This literally brings more business!
 
@@ -74,7 +74,7 @@ So if you're making a minimum wage and thanks to using our app you've improved y
 
 However, a typical Nozbe user saves 1 hour per week thanks to having all the projects and tasks organized in Nozbe. With the minimum wage it means you're gaining $40 per month while paying only $10 - that's an easy 30 dollars that Nozbe makes you.
 
-> You get at least $30 month after month!
+> You get at least $30, month after month!
 
 But what if you're an average skilled professional and you're making $30 bucks per month? With 1 hour per month saved you've got more than $20 in your pocket and with 1 hour per week saved, you've got more than 100 dollars ($112 to be exact). That's right:
 
@@ -92,7 +92,7 @@ That's why I disagree with my fellow entrepreneur. Even though Nozbe is not a ma
 
 I guess I need to start promoting Nozbe completely differently.
 
-How about: **Nozbe prints money**!
+> How about: **Nozbe prints money**!
 
 Or is it too much? 😛
 
