Updates + Money finally live

--- a/en/_posts/2024-10-21-noofficefm-51.md
+++ b/en/_posts/2024-10-21-noofficefm-51.md
@@ -2,6 +2,7 @@
 tags: [noofficefm,video]
 vid: "fgUcjH2leCw"
 podcast: 1527466890
+m: https://social.nozbe.com/@michael/113346600032028777
 ---
 
 # No Office FM #51: Why me and Magda are crazy about Task-Based Communication?
@@ -18,8 +19,6 @@ Another podcast episode recorded with my right-hand-woman Magda and a fellow [No
 <source src="https://media.transistor.fm/eff43bca/9115df07.mp3" type="audio/mpeg">
 </audio>
 
-
-
 [Full episode show notes at NOOFFICE.FM/51](https://nooffice.fm/51)
 
 ## Subscribe "No Office FM":
@@ -29,6 +28,11 @@ Another podcast episode recorded with my right-hand-woman Magda and a fellow [No
 🟡 [RSS](https://nozbe.com/nooffice.rss)\\
 🟠 [Overcast](https://overcast.fm/itunes1527466890/no-office)\\
 🔴 [YouTube on Nozbe channel](https://youtube.com/NozbeCom)
+
+
+## Trailer of this episode in less than 1 minute:
+
+{% include videos.html id="l81da3ZW-ZM" %}
 
 <!--podcast: 1527466890-->
 
