--- a/pl/_posts/2024-10-21-niemabiura-62.md
+++ b/pl/_posts/2024-10-21-niemabiura-62.md
@@ -18,8 +18,6 @@ Znowu z Magdą z [Nozbe][n] prowadzę podcast ale tym razem jesteśmy już w nas
 <source src="https://media.transistor.fm/1c29806d/b559efe1.mp3" type="audio/mpeg">
 </audio>
 
-
-
 [Notatki do odcinka na NIEMABIURA.PL/62](https://niemabiura.pl/62)
 
 ## Subskrybuj "Nie Ma Biura"
@@ -29,6 +27,10 @@ Znowu z Magdą z [Nozbe][n] prowadzę podcast ale tym razem jesteśmy już w nas
 🟡 [RSS](https://nozbe.com/niemabiura.rss)\\
 🟠 [Overcast](https://overcast.fm/itunes1526795631/nie-ma-biura)\\
 🔴 [YouTube na kanale Nozbe Poland](https://youtube.com/NozbePoland)
+
+## Skrót tego odcinka:
+
+{% include videos.html id="hTnZIb8uqEo" name="Nie ma biura 62" %}
 
 <!--podcast: 1526795631-->
 
