Threads PL and Newsletter and updates to money

--- a/en/_posts/2024-09-12-news-no48.md
+++ b/en/_posts/2024-09-12-news-no48.md
@@ -1,6 +1,6 @@
 ---
 tags: [news]
-img: "news-no48.jpg"
+img: "noofficefm-48t.jpg"
 t: https://x.com/MSliwinski/status/1833504372648776152
 l: https://www.linkedin.com/pulse/how-use-emails-productively-have-less-michael-sliwinski-mooif
 m: https://social.nozbe.com/@michael/113113821863947177
