--- a/en/_posts/2024-09-27-news-tags.md
+++ b/en/_posts/2024-09-27-news-tags.md
@@ -1,6 +1,6 @@
 ---
 tags: [news]
-img: "news-tags.jpg"
+img: "noofficefm-50t.jpg"
 m: https://social.nozbe.com/@michael/113204938236186874
 t: https://x.com/MSliwinski/status/1839350014512177647
 l: https://www.linkedin.com/pulse/why-batching-grouping-tasks-good-your-productivity-michael-sliwinski-wx52f
