--- a/en/_posts/2024-10-22-money.md
+++ b/en/_posts/2024-10-22-money.md
@@ -96,5 +96,11 @@ I guess I need to start promoting Nozbe completely differently.
 
 Or is it too much? 😛
 
+## P.S. This essay in less than 1 minute?
+
+Check out my short video that explains the concepts in this essay in a nutshell:
+
+{% include videos.html id="UO882JfF0xE" name="TIME = MONEY" %}
+
 [n]: https://michael.gratis/nozbe
 [np]: https://michael.gratis/nozbepersonal
