--- a/pl/_posts/2024-09-09-niemabiura-59.md
+++ b/pl/_posts/2024-09-09-niemabiura-59.md
@@ -18,8 +18,6 @@ Podcast Nie Ma Biura wrócił i teraz co środę o 9:00 rano będę nagrywał na
 <source src="https://media.transistor.fm/54ac8802/aec4265a.mp3" type="audio/mpeg">
 </audio>
 
-
-
 [Notatki do odcinka na NIEMABIURA.PL/59](https://niemabiura.pl/59)
 
 ## Subskrybuj "Nie Ma Biura"
@@ -29,6 +27,10 @@ Podcast Nie Ma Biura wrócił i teraz co środę o 9:00 rano będę nagrywał na
 🟡 [RSS](https://nozbe.com/niemabiura.rss)\\
 🟠 [Overcast](https://overcast.fm/itunes1526795631/nie-ma-biura)\\
 🔴 [YouTube na kanale Nozbe Poland](https://youtube.com/NozbePoland)
+
+## Skrót odcinka:
+
+{% include videos.html id="Nb5XyFGvXxg" name="𝗡𝗢𝗭𝗕𝗘 𝗩𝗦 𝗘-𝗠𝗔𝗜𝗟" %}
 
 <!--podcast: 1526795631-->
 
