--- a/pl/_posts/2024-10-08-niemabiura-61.md
+++ b/pl/_posts/2024-10-08-niemabiura-61.md
@@ -18,8 +18,6 @@ Tym razem podcast nagraliśmy z Magdą podczas zjazdu Nozbe w Warszawie i rozmaw
 <source src="https://media.transistor.fm/f031d86a/6f9aa380.mp3" type="audio/mpeg">
 </audio>
 
-
-
 [Notatki do odcinka na NIEMABIURA.PL/61](https://niemabiura.pl/61)
 
 ## Subskrybuj "Nie Ma Biura"
@@ -29,6 +27,10 @@ Tym razem podcast nagraliśmy z Magdą podczas zjazdu Nozbe w Warszawie i rozmaw
 🟡 [RSS](https://nozbe.com/niemabiura.rss)\\
 🟠 [Overcast](https://overcast.fm/itunes1526795631/nie-ma-biura)\\
 🔴 [YouTube na kanale Nozbe Poland](https://youtube.com/NozbePoland)
+
+## Skrót odcinka:
+
+{% include videos.html id="LqTYP35qrFk" name="𝗡𝗜𝗘𝗠𝗔𝗕𝗜𝗨𝗥𝗔 - Małe nawyki" %}
 
 <!--podcast: 1526795631-->
 
