--- a/en/_posts/2024-11-04-freedom.md
+++ b/en/_posts/2024-11-04-freedom.md
@@ -1,7 +1,8 @@
 ---
-tags: [lifelife,featured]
+tags: [life,wrong,featured]
 cover: "freedom.jpg"
 social: "freedom.jpg"
+m: https://social.nozbe.com/@michael/113430402829784349
 ---
 
 # Unlike you and me, billionaires are not free despite their fortunes
