headline harrison ford

--- a/en/_posts/2024-11-05-fcktrump.md
+++ b/en/_posts/2024-11-05-fcktrump.md
@@ -3,7 +3,7 @@ tags: [life]
 img: "fcktrump.jpg"
 ---
 
-# New York Times warns against Trump and his former allies, too!
+# New York Times warns against Trump while Harrison Ford makes a stand for Kamala Harris and democracy
 
 Yesterday I wrote about [billionaires and their newspapers like Washington Post or LA Times](/freedom) not having the freedom (or guts) to endorse Kamala Harris. Shame on them. Today [New York Times posted a great paragraph][ny] showing why we have to get rid of Trump and aspiring autocrats like him once and for all:
 
