--- a/en/_posts/2024-11-11-trump.md
+++ b/en/_posts/2024-11-11-trump.md
@@ -3,7 +3,7 @@ tags: [wrong,video]
 vid: "XLiagIdA84c"
 ---
 
-# Why USA re-elected a convicted felon, rapist, racist and simply the worst of men?
+# Why USA re-elected a convicted felon, liar, racist and simply the worst of men?
 
 Today is Monday, November 11, it's Independence Day in my home country of Poland yet I'm still thinking about the US elections last week and I'm trying to process what happened. [Billionaires called it](/freedom) and despite [smart people warning against it](/fcktrump/), America knew how awful Trump was, yet re-elected him. I think Jon Stewart said it best:
 
