--- a/en/_posts/2023-06-16-airtags.md
+++ b/en/_posts/2023-06-16-airtags.md
@@ -41,6 +41,16 @@ Both things are pretty easy and this video explains it very well:
 
 {% include video.html id="ZtAay-N-LgY" %}
 
+## Removing speakers from AirTags
+
+If you follow the video above, you'll see that all you have to do is open an AirTag and later using a sharp knife pry the plastic cover by sticking the knife in three key points:
+
+![{{ page.title }} Speaker](/img/airtags-speaker.jpg)
+
+Later you'll be able to pry out the speaker using that same knife and then when you put it together, the AirTag will no longer beep:
+
+![{{ page.title }} Bike](/img/airtags-bike.jpg)
+
 ## AirTags will finally be shared in iOS17 in September!
 
 At this point only one Apple ID can view one AirTag, which is a shame, especially in a family setup. Thankfully when the latest iOS17 ships in September together with the new iPhones, we will all be able to share our AirTags with family members.
