--- a/en/_posts/2024-11-13-podcast-212.md
+++ b/en/_posts/2024-11-13-podcast-212.md
@@ -22,6 +22,8 @@ Me and Radek are no longer recording the podcast together, but I decided to try 
 
 * [Weekly Template in detail](/week)
 * [My experiments with Notebooklm](/notebooklm)
+* [No Office FM podcast](/noofficefm)
+* [Team Productivity Vlog/Podcast](/vlog)
 
 ## 🎧 Subscribe to "The Podcast FM":
 
