--- a/en/_posts/2021-03-01-backpack21.md
+++ b/en/_posts/2021-03-01-backpack21.md
@@ -5,7 +5,7 @@ cover: "backpack.jpg"
 
 # What’s in my backpack? 🎒 
 
-Despite the [pandemic](/covid) and lack of long-haul travel, I’m still using my backpack almost daily when I need to leave home. As recently I embraced the [MagSafe lifestyle](/magsafe) I decided to review everything I carry in my backpack and write it up over here so that it might be also helpful to you. Here goes:
+**This post is from 2021**, [click for most up-to-date backpack and tech pouch](/backpack/). Old post follows… Despite the [pandemic](/covid) and lack of long-haul travel, I’m still using my backpack almost daily when I need to leave home. As recently I embraced the [MagSafe lifestyle](/magsafe) I decided to review everything I carry in my backpack and write it up over here so that it might be also helpful to you. Here goes:
 
 <!--More-->
 
@@ -15,8 +15,6 @@ Despite the [pandemic](/covid) and lack of long-haul travel, I’m still using m
 ## What's in my backpack in 2021?
 
 I did a long video review of my backpack contents [more than two years ago with Radek on episode 162 of The Podcast](/podcast-162/) so make sure to check it out. However, since then I've changed, updated and simplified my setup.
-
-**Update in 2024**: [There is a new backpack and updated travel pouch](/backpack24/).
 
 ### New backpack - Fjällräven Ulvö 23
 
