--- a/en/_posts/2023-05-03-pouch.md
+++ b/en/_posts/2023-05-03-pouch.md
@@ -6,7 +6,7 @@ m: https://social.nozbe.com/@michael/110306086062197816
 
 # What's in my travel tech pouch?
 
-Two years ago [I posted the contents of my backpack](/backpack/) and all the tech gear I have there. Until recently that's how I was carrying all my cables and tech. However recently I re-examined my setup and bought some new pouches and from now on this is how I'm carrying all my gear:
+**This post is from 2023**, [click for most up-to-date backpack and tech pouch](/backpack/). Two years ago [I posted the contents of my backpack](/backpack/) and all the tech gear I have there. Until recently that's how I was carrying all my cables and tech. However recently I re-examined my setup and bought some new pouches and from now on this is how I'm carrying all my gear:
 
 <!--More-->
 
@@ -16,8 +16,6 @@ Two years ago [I posted the contents of my backpack](/backpack/) and all the tec
 {:toc}
 
 ## Travel tech pouch
-
-**Update in 2024**: [I updated my travel pouch in 2024 as I moved to the USB-C lifestyle](/backpack24/)
 
 Recently I've been traveling much more and very often I'm on the road with either just my wife or with my entire family, so I realized I needed a bigger tech pouch with more cables and I bought:
 
