--- a/en/_posts/2024-01-01-backpack24.md
+++ b/en/_posts/2024-01-01-backpack24.md
@@ -7,7 +7,7 @@ m: https://social.nozbe.com/@michael/111682734735301503
 
 # What's in my backpack and tech pouch in 2024?
 
-Hello and Happy New Year 2024! Today is [day 1](/day1) and I'm starting off this year with an update to my [travel pouch](/pouch) and [backpack](/backpack), now that I've upgraded my trusty [iPhone 13 Mini](/mini13) to USB-C powered [iPhone 15 Pro](/iphone15). This changed helped me to streamline my setup and get rid of many Lightning dongles:
+**This post is from January 2024**, [click for most up-to-date backpack and tech pouch](/backpack/). Hello and Happy New Year 2024! Today is [day 1](/day1) and I'm starting off this year with an update to my [travel pouch](/pouch) and [backpack](/backpack), now that I've upgraded my trusty [iPhone 13 Mini](/mini13) to USB-C powered [iPhone 15 Pro](/iphone15). This changed helped me to streamline my setup and get rid of many Lightning dongles:
 
 <!--More-->
 
